--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AXKU7w01Gzl1YD3KCulHONLE9WbL4LYX-6vmbsFTEb56eAiG91nrXjHezSHNo0E7PAGFdBGm-hHM39px&currency=USD"></script>
 </body>
 
 </html>
