--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favico.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>react</title>
+  <title>SpaceX</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="https://www.paypal.com/sdk/js?client-id=AXKU7w01Gzl1YD3KCulHONLE9WbL4LYX-6vmbsFTEb56eAiG91nrXjHezSHNo0E7PAGFdBGm-hHM39px&currency=USD"></script>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AXKU7w01Gzl1YD3KCulHONLE9WbL4LYX-6vmbsFTEb56eAiG91nrXjHezSHNo0E7PAGFdBGm-hHM39px&currency=USD"></script>
 </body>
 
 </html>
